sdded extension floating ui

--- a/extension/popup.html
+++ b/extension/popup.html
@@ -52,6 +52,10 @@
     <button id="startButton" >
         Start Recording
     </button>
+    <div>
+       
+    
+    </div>
     <script src="popup.js"></script>
 </body>
 </html>
